# remote-sensing-satellite-downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: index.doctree
docs/.doctrees/modules/: api.doctree  data_types.doctree  enums.doctree  factories.doctree  services.doctree
docs/.doctrees/nbsphinx/notebooks/: search_sentinel_2.ipynb
docs/.doctrees/notebooks/: search_sentinel_2.doctree
docs/_modules/: index.html
docs/_modules/sat_download/: enums.html
docs/_modules/sat_download/api/: base.html  odata.html  usgs.html
docs/_modules/sat_download/data_types/: search.html
docs/_modules/sat_download/factories/: search.html
docs/_modules/sat_download/services/: downloader.html
docs/_sources/modules/: api.rst  enums.rst  services.rst
docs/modules/: api.html  data_types.html  enums.html  factories.html  services.html
docs/notebooks/: search_sentinel_2.html
sat_download/: enums.py
sat_download/api/: __init__.py  base.py  odata.py  usgs.py
sat_download/data_types/: __init__.py  search.py
sat_download/factories/: search.py
sat_download/services/: __init__.py  downloader.py
sphinx/source/: conf.py  index.rst
sphinx/source/modules/: data_types.rst  factories.rst
src/api/: __init__.py  base.py  odata.py  usgs.py
src/data_types/: __init__.py  search.py
src/factories/: search.py
src/services/: __init__.py  downloader.py
